--- a/modules/project-complaints/client/views/complaint-list.html
+++ b/modules/project-complaints/client/views/complaint-list.html
@@ -1,7 +1,9 @@
 
+
 <div class="project-complaints-view">
 	<div class="view-title-container">
 		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Complaints</h1>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
 	</div>
 	<div class="view-body-container">
 		<div class="button-bar">
@@ -11,14 +13,15 @@
 			</a>
 		</div>
 		<section class="panel panel-default">
-			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-hover table-striped">
+			<table ng-table="tableParams" show-filter="true" class="table table-hover table-striped">
 				<tr ng-repeat="o in $data" ui-sref="p.complaint.detail({complaintId:o._id})">
 					<td data-title="'Complainant'"	title:'Complainant'		filter="{'complainant':'text'}"	sortable="'complainant'"    >{{o.complainant}}</td>
-					<td data-title="'Stage'"			title:'Stage'			filter="{'stage':'select'}"		sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-					<td>
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
-							<i class="glyphicon glyphicon-pencil"></i>
+					<td data-title="'Stage'"		title:'Stage'			filter="{'stage':'select'}"		sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
+					<td class="actions-col action-x2" header-class="'action-col action-x2'">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="p.complaint.edit({complaintId:o._id})">
+							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
+						<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
 					</td>
 				</tr>
 				<tr ng-if="!$data || $data.length === 0">
