--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -2,6 +2,7 @@
 
 	<div class="view-title-container">
 		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Valued Component</h1>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
 	</div>
 
 	<div class="view-body-container">
@@ -50,13 +51,11 @@
 			</div>
 		</div>
 		<tmpl-artifact-display x-mode="'view'" x-artifact="vc.artifact" x-project="project"></tmpl-artifact-display>
-	</div>
-		
+
 		<div class="form-footer clearfix">
 			<a class="back-btn btn btn-link pull-left" ui-sref="p.vc.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Valued Components</a>
 			<a class="btn btn-default pull-right" ng-click="$event.stopPropagation()" x-mode="'edit'" ui-sref="p.vc.edit({vcId:vc._id})">Edit</a>
 		</div>
-		
 	</div>
-	
+
 </div>
