--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -2,6 +2,7 @@
 	
 	<div class="view-title-container">
 		<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;{{artifact.name}}</h1>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
 	</div>
 	
 	<div class="view-body-container">
