--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -1,7 +1,8 @@
 <div class="condition-library-view">
 
-	<div class="view-title-container no-border">
+	<div class="view-title-container">
 		<h1>Condition Library</h1>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
 	</div>
 
 	<div class="view-body-container">
