--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -2,6 +2,7 @@
 
 	<div class="view-title-container">
 		<h1>Organizations</h1>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
 	</div>
 
 	<div class="view-body-container">
@@ -21,8 +22,8 @@
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
 					<td data-title="'DBA'"  filter="{'company':'text'}"   sortable="'company'">{{o.company}}</td>					
 					<td data-title="'Location'" filter="{'registeredIn':'text'}"    sortable="'registeredIn'" >{{o.registeredIn}}</td>
-					<td ng-if="showedit" class="actions-col action-x1" header-class="'actions-col action-x1'">
-						<a class="btn btn-link btn-sm" title="Edit Organization" ng-click="$event.stopPropagation()" ui-sref="admin.organization.edit({orgId:o._id})">
+					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+						<a class="btn btn-link btn-sm" title="Edit Organization" ng-if="showedit" ng-click="$event.stopPropagation()" ui-sref="admin.organization.edit({orgId:o._id})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
