--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -1,8 +1,8 @@
 <div class="vc-library-view">
-	
+
 	<div class="view-title-container">
 		<h1>Valued Components Library</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
 	</div>
 
 	<div class="view-body-container">
@@ -30,7 +30,7 @@
 					</td>
 					<tr ng-show="!$data || !$data.length" class="text-center">
 						<td colspan="5">No records found.</td>
-					</tr>					
+					</tr>
 				</tr>
 			</table>
 		</section>
