--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -2,7 +2,7 @@
 
 	<div class="view-title-container">
 		<h1>Condition Library</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
 	</div>
 
 	<div class="view-body-container">
@@ -37,7 +37,7 @@
 				</tr>
 			</table>
 		</section>
-		
+
 	</div>
 
 </div>
