--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -1,9 +1,9 @@
 <div class="documents-view">
 	<div class="view-title-container">
 		<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;Documents</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
 	</div>
-	
+
 	<div class="view-body-container">
 		<div class="row hidden">
 			<div class="col-sm-12 text-right">
@@ -24,5 +24,5 @@
 			x-project="project">
 		</tmpl-documents-approvals>
 	</div>
-	
+
 </div>
