--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -2,7 +2,7 @@
 
 	<div class="view-title-container">
 		<h1>Organizations</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
 	</div>
 
 	<div class="view-body-container">
@@ -20,7 +20,7 @@
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.organization.detail({orgId:o._id})" class="clickable">
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
-					<td data-title="'DBA'"  filter="{'company':'text'}"   sortable="'company'">{{o.company}}</td>					
+					<td data-title="'DBA'"  filter="{'company':'text'}"   sortable="'company'">{{o.company}}</td>
 					<td data-title="'Location'" filter="{'registeredIn':'text'}"    sortable="'registeredIn'" >{{o.registeredIn}}</td>
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
 						<a class="btn btn-link btn-sm" title="Edit Organization" ng-if="showedit" ng-click="$event.stopPropagation()" ui-sref="admin.organization.edit({orgId:o._id})">
