--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -2,11 +2,11 @@
 
 	<div class="view-title-container">
 		<h1>Template Library</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project"></tmpl-permissions-gear>
+		<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
 	</div>
-	
+
 	<div class="view-body-container">
-		
+
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm" ui-sref="admin.template.create()">
 				<span class="glyphicon glyphicon-plus"></span>
@@ -16,7 +16,7 @@
 				<show-filter x-toggle-filter="toggleFilter"></show-filter>
 			</div>
 		</div>
-		
+
 		<div class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-hover table-striped">
 				<tr ng-repeat="o in $data" ui-sref="admin.template.detail({templateId:o.id})" class="clickable">
@@ -44,6 +44,6 @@
 				</tr>
 			</table>
 		</div>
-		
+
 	</div><!-- / view-body-container- ->
 </div>
