ESM-285 - Tombstone info
Fixed binding for team notes

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -177,7 +177,7 @@
 			<div class="col-sm-12" ng-if="c.isEao && project.intake.constructionjobsNotes">
 				<div class="detail-row">
 					<label>Team Notes</label>
-					<span class="value wrap-text">{{project.intake.teamNotes}}</span>
+					<span class="value wrap-text">{{project.teamNotes}}</span>
 				</div>
 			</div><!-- / TEAM MEMBERS -->
 
