ESM-285 - Tombstone info
Fixed binding for electoral districts

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -116,14 +116,14 @@
 				<div class="col-sm-6 col-md-4" ng-if="project.provElectDist">
 					<div class="detail-row">
 						<label>Provincial Electoral Districts</label>
-						<span class="value">{{project.provElectDist}}
+						<span class="value">{{project.provElecDist}}
 						</span>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4" ng-if="project.fedElecDist">
 					<div class="detail-row">
 						<label>Federal Electoral Districts</label>
-						<span class="value">{{project.fedElectDist}}</span>
+						<span class="value">{{project.fedElecDist}}</span>
 					</div>
 				</div>
 			</div><!-- / ELECTORAL DISTRICTS -->
