ESM-285 Fixing tombstone info

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -111,9 +111,9 @@
 			</div><!-- / ADDITIONAL CONTACTS -->	
 
 			<!-- ELECTORAL DISTRICTS -->
-			<div class="row" ng-if="project.provElectDist || project.fedElectDist">
+			<div class="row" ng-if="project.provElecDist || project.fedElecDist">
 				<hr>
-				<div class="col-sm-6 col-md-4" ng-if="project.provElectDist">
+				<div class="col-sm-6 col-md-4" ng-if="project.provElecDist">
 					<div class="detail-row">
 						<label>Provincial Electoral Districts</label>
 						 <span class="value">{{project.provElecDist}}
