--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -3,14 +3,14 @@
 
     <div class="panel-heading clearfix">
       <h2>{{s.caption}}</h2>
-      <button class="btn btn-default btn-sm " type="button" ng-click="$event.stopPropagation();s.openAddTypes()">Add
-        Item
-      </button>
-      <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project"
-                             x-permissions="listArtifacts"></tmpl-permissions-gear>
+      <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
     </div>
 
     <!-- TABLE -->
+    <div class="button-bar">
+      <button class="btn btn-default btn-sm " type="button" ng-click="$event.stopPropagation();s.openAddTypes()">
+        <span class="glyphicon glyphicon-plus"></span><span>Add Content</span></button>
+    </div>
     <table class="table table-hover" ng-table="s.tableParams" show-filter="true">
       <tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
         <td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}"
